[gd_scene load_steps=8 format=3 uid="uid://8pmarojekhy2"]

[ext_resource type="Script" path="res://scenes/MainScreen/main_screen.gd" id="1_can4d"]
[ext_resource type="Texture2D" uid="uid://dpombpyb453he" path="res://assets/images/ui/main_screen_key_art.png" id="2_twqar"]
[ext_resource type="LabelSettings" uid="uid://gji5k8k2bljl" path="res://assets/fonts/font_effects/new_label_settings.tres" id="3_lnatx"]
[ext_resource type="Texture2D" uid="uid://cmh72eocrcwk2" path="res://assets/images/ui/fly_fly_sviny_logo.png" id="3_wm6dy"]
[ext_resource type="LabelSettings" uid="uid://cdikkf5pdveor" path="res://assets/fonts/font_effects/common_font_effect.tres" id="4_b3iq3"]

[sub_resource type="Animation" id="Animation_b1i83"]
resource_name = "press_play_animation"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UIMarginContainer/PressPlay:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_12s6i"]
_data = {
"press_play_animation": SubResource("Animation_b1i83")
}

[node name="MainScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_can4d")

[node name="LoadingImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -830.0
offset_top = -536.0
offset_right = 830.0
offset_bottom = 536.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_twqar")
expand_mode = 1
stretch_mode = 4

[node name="Logo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -240.0
offset_top = 80.0
offset_right = 240.0
offset_bottom = 260.0
grow_horizontal = 2
texture = ExtResource("3_wm6dy")
expand_mode = 3

[node name="UIMarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ScoreMarginContainer" type="MarginContainer" parent="UIMarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 400
theme_override_constants/margin_right = 400

[node name="HBoxContainer" type="HBoxContainer" parent="UIMarginContainer/ScoreMarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20
alignment = 1

[node name="ScoreText" type="Label" parent="UIMarginContainer/ScoreMarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "High Score:"
label_settings = ExtResource("3_lnatx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreValue" type="Label" parent="UIMarginContainer/ScoreMarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "000"
label_settings = ExtResource("3_lnatx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PressPlay" type="Label" parent="UIMarginContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Press Enter to Play!"
label_settings = ExtResource("4_b3iq3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PressPlayFlashAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_12s6i")
}
autoplay = "press_play_animation"
